first component electron and forge installed

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+@font-face {
+    font-family: nia;
+    src: url(assets/Niafont-Regular.ttf) format("opentype");
+  }
+  
+.nia-script {
+    font-family: "nia" !important;
+    font-size: 30px;
+}
